tools/deployment/website/staging/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: 'http'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: arbimon-api-ingress
  namespace: staging
  labels:
    app: arbimon
spec:
  rules:
    - host: staging.arbimon.org
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: biodiversity-api-service
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: 'http'
    nginx.ingress.kubernetes.io/limit-rpm: "120"
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
  name: arbimon-legacy-api-ingress
  namespace: staging
  labels:
    app: arbimon
spec:
  rules:
    - host: staging.arbimon.org
      http:
        paths:
          - path: /legacy-api
            pathType: Prefix
            backend:
              serviceName: arbimon-service
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: 'http'

    # Add http basic auth (user/password in bio-basic-auth-secrets)
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    # nginx.ingress.kubernetes.io/auth-secret: bio-basic-auth-secrets
  name: arbimon-combined-ingress
  namespace: staging
  labels:
    app: arbimon
spec:
  rules:
  - host: staging.arbimon.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: biodiversity-website-service
          servicePort: 80
      - path: /admin
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
      - path: /legacy-login
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
      - path: /legacy-login-callback
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
      - path: /legacy-logout
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
      - path: /fonts
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
      - path: /images
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
      - path: /includes
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
      - path: /project
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
      - path: /citizen-scientist
        pathType: Prefix
        backend:
          serviceName: arbimon-service
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: 'http'
  name: arbimon-core-ingress
  namespace: staging
  labels:
    app: biodiversity-website
spec:
  rules:
  - host: staging-core.arbimon.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: core-api-service
          servicePort: 80
